<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.etrack.feedback.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">
        <!--

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Feedback" />
        -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp" android:textColor="@color/colorblack"
                android:text="@string/how_do_you_rate"
                android:textSize="35sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_gravity="center"
                android:layout_marginEnd="20dp" android:textColor="@color/colorblack"
                android:text="@string/dash"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_do_you_ratearb" android:textColor="@color/colorblack"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/ll_good"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="top"
                android:orientation="vertical"
                android:weightSum="5">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@drawable/ic_good" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="center"  android:textColor="@color/colorblack"
                    android:text="@string/good"
                    android:textSize="40sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/arabgood"  android:textColor="@color/colorblack"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_average"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="5">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:src="@drawable/ic_average" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="center" android:textColor="@color/colorblack"
                    android:text="@string/average"
                    android:textSize="40sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/arabAverage"  android:textColor="@color/colorblack"
                    android:textSize="40sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_sad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="5">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_sad" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"  android:textColor="@color/colorblack"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/bad"
                    android:textSize="40sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/arabBad"  android:textColor="@color/colorblack"
                    android:textSize="40sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
